# mod_simpleamd

./: Makefile  Makefile.am  README.md  configure.ac  mod_simpleamd.c
conf/autoload_configs/: simpleamd.conf.xml
rpm/: build_rpm.sh  create_src_tarball.sh  mod_simpleamd.spec
